--- a/C++11.md
+++ b/C++11.md
@@ -1,4 +1,6 @@
-# 第七章   类#
+# C++11 prime#
+
+## 七	C++ 类
 
 ## 重点
 
@@ -118,7 +120,7 @@
 
 10. 聚合类
 
-   >所有成员都是public的；没有定义任何构造函数；没有类内初始值；没有基类，也没有virtual函数；
+  >所有成员都是public的；没有定义任何构造函数；没有类内初始值；没有基类，也没有virtual函数；
 
 11. 类的静态成员
 
