--- a/		吊车识别部署流程.md
+++ b/		吊车识别部署流程.md
@@ -7,7 +7,7 @@
   ​
 
 
-- 安装cuda、cudnn 
+- ## 安装cuda、cudnn 
 
   **路径：/usr/local/cuda-8.0**
 
@@ -20,7 +20,7 @@
   ```
 
 
-- 安装opencv3.1
+- ## 安装opencv3.1
 
   **路径：/usr/local/opencv-3.1.0**
 
@@ -42,7 +42,7 @@
 
 ------
 
-## 徐博士那边：
+##### 徐博士那边：
 
 - 首先运行下列命令
 
@@ -63,7 +63,7 @@
   ```
 
 
-- 编译caffe
+- ## 编译caffe
 
   **路径：/usr/local/**
 
@@ -78,7 +78,9 @@
 
 ------
 
-## 晓鹏那边：
+##### 晓鹏那边：
+
+**路径：/usr/local/hhit/**
 
 ```shell
 cd shandong/carDetector/
@@ -89,9 +91,9 @@ cd shandong/
 
 
 
-**<u>遇到的问题</u>**
+## **<u>protobuf的问题</u>**
 
-<!--主要是因为caffe编译的时候默认的protobuf的版本是2.6.1，而Python通过pip install protobuf 安装的版本是最新版本3.4.0！而在caffe环境中我们必须统一ProtoBuffer的版本才可以避免各种不易排查的错误！！ 为此，我们先卸载Python的版本ProtoBuffer，再重新安装2.6.1的版本就完美的解决了这个问题。--> 
+##### <!--主要是因为caffe编译的时候默认的protobuf的版本是2.6.1，而Python通过pip install protobuf 安装的版本是最新版本3.4.0！而在caffe环境中我们必须统一ProtoBuffer的版本才可以避免各种不易排查的错误！！ 为此，我们先卸载Python的版本ProtoBuffer，再重新安装2.6.1的版本就完美的解决了这个问题。--> 
 
 解决办法：
 
@@ -105,3 +107,4 @@ cd shandong/
 
 ## 沈刚那边：
 
+保留/usr/local/hh目录
